# git-monitor

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  diff.rs  event.rs  git.rs  main.rs  pager.rs  ui.rs  watcher.rs
